--- a/src/app/shared/profile-page/profile-page.component.scss
+++ b/src/app/shared/profile-page/profile-page.component.scss
@@ -164,7 +164,7 @@ body {
     border: 2px solid $main-color-light;
   }
   .providers.extended {
-    margin-left: 7px;
+    margin-left: 0;
     margin-right: 0;
     padding: 10px;
     height: 42px;
