fixed graphic for multi IdP Feature in profile page

--- a/src/app/session/session/session.component.html
+++ b/src/app/session/session/session.component.html
@@ -19,7 +19,7 @@
 
     <a (click)="createAccount();" tooltip="Create Account" class="small-btn"><i class="far fa-plus"></i></a>
     <span class="search-bar">
-      <input type="text" (keyup)="filterSessions($any($event.target).value)" placeholder="Find an account..."/>
+      <input type="text" (keyup)="filterSessions($any($event.target).value)" placeholder="Search by..."/>
       <i class="far fa-search"></i>
     </span>
   </div>
