--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -127,6 +127,10 @@ button.small-btn {
   margin: 35px 0!important;
   font-size: 14px!important;
   padding: 5px!important;
+  color: white;
+}
+button.small-btn:hover {
+  color: #73E0CF;
 }
 
 button.xs-btn {
@@ -137,6 +141,9 @@ button.xs-btn {
   margin: 10px 0 0 8px!important;
   font-size: 14px!important;
   padding: 5px!important;
+}
+button.xs-btn:hover {
+  color: #73E0CF;
 }
 
 label { font-size: 12px; }
