--- a/src/app/session/session/session.component.scss
+++ b/src/app/session/session/session.component.scss
@@ -220,3 +220,11 @@ h3 {
   top: 5px;
   color: $text-color;
 }
+
+.fixed-profiles {
+  position: absolute;
+  right: 138px;
+  font-size: 11px;
+  top: 5px;
+  color: $text-color;
+}
