--- a/src/app/session/session-card/session-card.component.html
+++ b/src/app/session/session-card/session-card.component.html
@@ -38,7 +38,7 @@
 
 <ng-template #ssmModalTemplate>
   <div class="modal-header">
-    <button type="button" class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></button>
+    <a class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></a>
     <b>{{session.account.accountName}}</b> - {{$any(session.account).role ? $any(session.account).role.name : 'Plain' }} | <b>SSM</b>
   </div>
   <div class="modal-body">
@@ -71,7 +71,7 @@
 
 <ng-template #defaultRegionModalTemplate>
   <div class="modal-header">
-    <button type="button" class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></button>
+    <a class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></a>
     <b>{{session.account.accountName}}</b> - {{$any(session.account).role ? $any(session.account).role.name : 'Plain' }} | <b>Change {{session.account.type === eAccountType.AZURE ? 'Location' : 'Region'}}</b>
   </div>
   <div class="modal-body">
@@ -79,15 +79,17 @@
     <div class="ssm-tray">
 
       <b class="">Select a default region for the session:</b>
-      <ng-select bindLabel="{{session.account.type === eAccountType.AZURE ? 'location' : 'region'}}" bindValue="{{session.account.type === eAccountType.AZURE ? 'location' : 'region'}}" [items]="regionOrLocations" [(ngModel)]="selectedDefaultRegion" placeholder="{{placeholder}}" (change)="changeDefaultRegion($event);"></ng-select>
+      <ng-select bindLabel="{{session.account.type === eAccountType.AZURE ? 'location' : 'region'}}" bindValue="{{session.account.type === eAccountType.AZURE ? 'location' : 'region'}}" [items]="regionOrLocations" [(ngModel)]="selectedDefaultRegion" placeholder="{{placeholder}}"></ng-select>
 
+      <button type="button" (click)="goBack();" class="pull-left disabled">Back</button>
+      <button type="button" (click)="changeDefaultRegion();" [disabled]="!selectedDefaultRegion" [ngClass]="(!selectedDefaultRegion) ? 'pull-right disabled': 'pull-right'">Save</button>
     </div>
   </div>
 </ng-template>
 
 <ng-template #defaultProfileModalTemplate>
   <div class="modal-header">
-    <button type="button" class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></button>
+    <a class="back" aria-label="Close" (click)="modalRef.hide();"><i class="fa fa-arrow-left"></i></a>
     <b>{{session.account.accountName}}</b> - {{$any(session.account).role ? $any(session.account).role.name : 'Plain' }} | <b>Change Profile</b>
   </div>
   <div class="modal-body">
@@ -99,9 +101,10 @@
                  [addTag]="addNewProfile"
                  [items]="profiles"
                  [(ngModel)]="selectedProfile"
-                 placeholder="select a profile"
-                 (change)="changeDefaultProfile($event);"></ng-select>
+                 placeholder="select a profile"></ng-select>
 
+      <button type="button" (click)="goBack();" class="pull-left disabled">Back</button>
+      <button type="button" (click)="changeDefaultProfile();" [disabled]="!selectedProfile" [ngClass]="(!selectedProfile) ? 'pull-right disabled': 'pull-right'">Save</button>
     </div>
   </div>
 </ng-template>
