fixed aws sso not showing sessions correctly on first launch

--- a/src/app/integrations/components/aws-sso/aws-sso.component.html
+++ b/src/app/integrations/components/aws-sso/aws-sso.component.html
@@ -54,8 +54,6 @@
 
   </ng-container>
   <ng-container *ngIf="loading">
-    <div class="container-fluid">
-      TODO: implement loader here
-    </div>
+    <div class="container-fluid"></div>
   </ng-container>
 </div>
