--- a/src/app/start/start-screen/start-screen.component.html
+++ b/src/app/start/start-screen/start-screen.component.html
@@ -1,4 +1,4 @@
-<div class="content flex-container column page-container" *ngIf="!loading">
+<div class="content flex-container column page-container">
 
     <img src="assets/images/start-screen.png" class="background" />
 
@@ -6,33 +6,7 @@
 
     <p>Collect all your Cloud access data in a single place and connect straight away</p>
 
-    <button (click)="resolveDependencies();" class="btn btn-default btn-gradient">Start</button>
+    <button (click)="goToSetup();" class="btn btn-default btn-gradient">Start</button>
 
     <span>Any doubts? Check our <a (click)="openDocumentation();" class="dark-link">documentation</a>.</span>
-</div>
-
-<div class="content flex-container column page-container" *ngIf="loading">
-
-  <div class="app-loading">
-    <img src="assets/images/be-auth-logo.svg" width="100" />
-    <svg class="spinner" viewBox="25 25 50 50">
-      <defs>
-        <linearGradient id="linearColors1">
-          <stop offset="0%" stop-color="#F3AB1C"></stop>
-          <stop offset="100%" stop-color="#E15200"></stop>
-        </linearGradient>
-      </defs>
-      <circle
-        class="path"
-        cx="50"
-        cy="50"
-        r="20"
-        fill="none"
-        stroke-width="2"
-        stroke-miterlimit="10"
-        stroke="url(#linearColors1)"
-      />
-    </svg>
-  </div>
-
 </div>
